--- a/styles/markdown.module.scss
+++ b/styles/markdown.module.scss
@@ -7,6 +7,7 @@
 
   a {
     color: #4183C4;
+
     &:hover {
       text-decoration: underline;
     }
@@ -66,12 +67,14 @@
   }
 
   h1 {
+    margin-top: 2.25rem;
     font-size: 2.25em;
     line-height: 1.2;
     border-bottom: 1px solid #d4d4d4;
   }
 
   h2 {
+    margin-top: 1.75rem;
     font-size: 1.75em;
     line-height: 1.225;
     border-bottom: 1px solid #d4d4d4;
@@ -117,13 +120,19 @@
   ul,
   ol,
   dl,
-  table {
+  table,
+  li {
     margin: 0.8em 0;
   }
 
-  li>ol,
-  li>ul {
-    margin: 0 0;
+  li {
+    ol, ul {
+      list-style-type: circle;
+      &>li ol,
+      &>li ul {
+        list-style-type: square;
+      }
+    }
   }
 
   hr {
@@ -164,8 +173,9 @@
   }
 
   blockquote {
-    border-left: 4px solid #dfe2e5;
-    padding: 0 15px;
+    border-left: 4px solid #4183C4;
+    background-color: #dfe2e5;
+    padding: 1px 15px;
     color: #777777;
   }
 
@@ -186,7 +196,7 @@
 
   table tr:nth-child(2n),
   thead {
-    background-color: #f8f8f8;
+    background-color: #dfe2e5;
   }
 
   table th {
@@ -231,6 +241,21 @@
     padding: 2px 6px 0 6px;
     font-size: 0.9em;
     color: #444;
+  }
+
+  pre {
+    width: auto;
+    padding: 0.4em 0.8em;
+    margin: 0.8em 0;
+    background-color: #4B5563;
+    border-radius: 4px;
+    overflow: scroll;
+    code {
+      padding: 0;
+      background-color: transparent;
+      border: none;
+      color: #E5E7EB;
+    }
   }
 
   .md-fences {
